# CanaryAgent

./: .gitignore  README.md  pyproject.toml
canary_agent/collector/market/: __init__.py  indicator_collector.py  macro_indicator_collector.py  ohlcv_collector.py  short_collector.py  tech_indicator_collector.py
canary_agent/collector/market/clinent/: __init__.py  ecos_client.py
canary_agent/collector/market/output/: __init__.py  indicator_output.py  macro_indicator_output.py  ohlcv_output.py  short_output.py  tech_indicator_output.py
canary_agent/core/base/: __init__.py  base_collector.py  base_market_output.py
