[project]
name = "canary-agent"
version = "0.1.0"
description = "CanaryAgent: AI agent that proactively identifies and alerts to potential risks in investment portfolio."
authors = [
    {name = "Eumgill98",email = "wjdghcks02@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "langchain (>=1.2.0,<2.0.0)",
    "yfinance (>=1.0,<2.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
